@startuml
' 抽象表达式
abstract class Expression {
    + interpret() : int
}

' 数字表达式（终结符）
class NumberExpression {
    - number: int
    + NumberExpression(number: int)
    + interpret() : int
}

' 加法表达式（非终结符）
class PlusExpression {
    - left: unique_ptr<Expression>
    - right: unique_ptr<Expression>
    + PlusExpression(left: unique_ptr<Expression>, right: unique_ptr<Expression>)
    + interpret() : int
}

' 减法表达式（非终结符）
class MinusExpression {
    - left: unique_ptr<Expression>
    - right: unique_ptr<Expression>
    + MinusExpression(left: unique_ptr<Expression>, right: unique_ptr<Expression>)
    + interpret() : int
}

Expression <|-- NumberExpression
Expression <|-- PlusExpression
Expression <|-- MinusExpression
@enduml
